# OpenAIDE

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.mjs  tmp-project-collapse.spec.js
.github/: CODEOWNERS  (+2 more)
openaide-rs/app-server/: Cargo.toml
openaide-rs/app-server-protocol/: Cargo.toml
openaide-rs/app-server-protocol/src/: agent.rs  attachment.rs  attachment_tests.rs  client.rs  client_tests.rs  diagnostics.rs  envelopes.rs  envelopes_tests.rs  errors.rs  events.rs  events_tests.rs  ids.rs  lib.rs  methods.rs  server_requests.rs  server_requests_tests.rs  settings.rs  snapshot.rs  state.rs  state_tests.rs  support.rs  task.rs  task_tests.rs  typescript.rs  workspace.rs  worktree.rs
openaide-rs/app-server/examples/: runtime_contract_fixtures.rs
openaide-rs/app-server/src/: agent_identity.rs  agent_identity_tests.rs  app_lifecycle.rs  app_lifecycle_tests.rs  app_server_client.rs  app_server_handoff.rs  app_server_process.rs  app_server_process_tests.rs  attachment_runtime.rs  chat_history.rs  chat_history_tests.rs  client_lifecycle.rs  client_lifecycle_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  media.rs  projects.rs  protocol_edge.rs  protocol_edge_process.rs  protocol_edge_process_tests.rs  server_requests.rs  settings.rs  shell_file_handles.rs  snapshots.rs  state_sync.rs  state_sync_tests.rs  storage_fatal_supervisor_tests.rs  storage_runtime.rs  task_events.rs  task_recovery.rs  task_recovery_tests.rs  time.rs  time_tests.rs  workspace_file_index.rs  workspace_file_index_tests.rs  worktree_events.rs
openaide-rs/app-server/tests/: runtime_contract.rs  task_journal_store.rs  task_storage_benchmark.rs  worktree_inventory.rs
(+1002 files in other folders)
