[package]
name = "openaide-app-server-protocol"
version = "0.0.1-alpha.3"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"] }

[dev-dependencies]
serde_json.workspace = true
