[package]
name = "openaide-app-server"
version = "0.0.1-alpha.4"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-client-protocol.workspace = true
agent-client-protocol-schema.workspace = true
base64.workspace = true
openaide-app-server-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
fs2.workspace = true
ignore.workspace = true
notify.workspace = true
nucleo-matcher.workspace = true

[dev-dependencies]
tempfile.workspace = true
